--- a/cssAssignment1/CssAsignment1.html
+++ b/cssAssignment1/CssAsignment1.html
@@ -9,22 +9,44 @@
     </style>
 </head>
 <body > 
-        <div class = "nav">
-            <ul class="nav-wrapper">
-                <li><a href="#">Home</a></li>
-                <li>
-                    <a href="#">About us;</a>
-                    <ul >
-                        <li><a href="#">Example Link</a></li>
-                        <li><a href="#">Example link 2</a></li>
-                        <li><a href="#">Example Link 3</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Our service</a></li>
-                <li><a href="#">Our Portfolio</a></li>
-                <li><a href="#">Contact Us</a></li>
+  <div class = "nav">
+      <ul class="nav-wrapper">
+          <li><a href="#">Home</a>
+              <ul >
+                <li><a href="#">Example Link</a></li>
+                <li><a href="#">Example link 2</a></li>
+                <li><a href="#">Example Link 3</a></li>
+                <li><a href="#">Example Link 4</a></li>
             </ul>
-        </div>
+          </li>
+          <li><a href="#">About us;</a>
+              <ul >
+                  <li><a href="#">Example Link</a></li>
+                  <li><a href="#">Example link 2</a></li>
+                  <li><a href="#">Example Link 3</a></li>
+                  <li><a href="#">Example Link 4</a></li>
+              </ul>
+          </li>
+          <li><a href="#">Our service</a>
+              <ul >
+                <li><a href="#">Example Link</a></li>
+                <li><a href="#">Example link 2</a></li>
+                <li><a href="#">Example Link 3</a></li>
+                <li><a href="#">Example Link 4</a></li>
+              </ul>
+          </li>
+          <li><a href="#">Our Portfolio</a>
+              <ul >
+                <li><a href="#">Example Link</a></li>
+                <li><a href="#">Example link 2</a></li>
+                <li><a href="#">Example Link 3</a></li>
+                <li><a href="#">Example Link 4</a></li>
+              </ul>
+          </li>
+          <li><a href="#">Contact Us</a>
+          </li>
+      </ul>
+  </div>
  <!--    </div> -->
 </body>
-</html>                                		
+</html>                                                                  		
