--- a/cssAssignment2/cssAssignment2.html
+++ b/cssAssignment2/cssAssignment2.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <link href="cssexercisestyle2.css" rel ="stylesheet" type="text/css">
+    <link href="cssstyle2.css" rel ="stylesheet" type="text/css">
     <title></title>
 </head>
   <body>
