--- a/cssAssignment2/cssAssignment2.html
+++ b/cssAssignment2/cssAssignment2.html
@@ -12,7 +12,7 @@
         <h1>  This is the header </h1>
       </div>
 
-      <!-- <div class = "content"> -->
+      <div class = "content">
         
         <div class="fixedleft ">
           <h2> Fixed Section of 250px width</h2><br>
@@ -79,7 +79,7 @@
 
         </div>
 
-     <!--  </div> -->
+      </div>
 
       <div class="footer">
         <hi>This is the footer</hi>
